--- a/index.html
+++ b/index.html
@@ -37,24 +37,92 @@
         <hr>
 
         <section class="section flexbox_container">
-            <article id="">
+            <article id="article">
                 <h2>
-                    
+                    La Alhambra
                 </h2>
-                <ul>
-                    <li></li>
-                </ul>
-            </article>
+                <p>
+                    En primer lugar vamos a tener en cuenta que el arte islámico se caracteriza por ser un arte del «¿cómo?» y no un arte del «¿qué?». Al utilizar estas dos interrogativas me refiero a que lo importante no es el material empleado para realizar los objetos o las partes de una habitación, lo que verdaderamente tiene valor es cómo se trabaja ese material utilizado. Por eso, aunque abundan en la Alhambra los llamados materiales nobles, como el mármol y las maderas de calidad que cubren los techos, una gran parte del edificio está decorada exclusivamente con unos materiales tan sencillos y tan pobres como la arcilla y el yeso. Pero la simplicidad de estos elementos desaparece por completo al pasar por las manos del artista anónimo que las convierte en obras de arte.
 
-            <hr>
+                    Si tomamos como ejemplo cualquiera de las habitaciones de cualquiera de los palacios nazaríesvamos a ver que la distribución de materiales es, en general, la siguiente cuando se trata de recubrir las paredes:
 
-            <article id="">
-                <h2>
-                    
-                </h2>
-                <ul>
-                    <li></li>
-                </ul>
+                    -Alicatado.
+
+                    La primera parte del muro, que según las diferentes cámaras puede representar desde un tercio a un cuarto del total, está decorada con piezas de cerámica vidriada coloreada con diferentes motivos decorativos. Esta técnica de fabricar el barro y de cocerlo produciendo el brillo metálico del vidriado la trajeron los árabes de Egipto al principio de su expansión.
+
+                    Yeserías
+
+                    El resto de la pared se cubre con grandes piezas rectangulares o cuadradas de yeso, llenas por completo de elementos decorativos. Estas grandes piezas se trabajaban con moldes fuera de la pared y, cuando estaban listas, se pegaban al muro mediante un cemento o argamasa ligera. Es muy interesante este sistema de las yeserías porque,
+
+                    como nos consta por hallazgos que se han encontrado en investigaciones y reparaciones, por diferentes motivos se sustituían los trozos sin modificar totalmente la sala; por ejemplo, si se trataba de una yesería en la que había una alabanza a un sultán que había muerto, era posible que se retirara el panel donde estaba el nombre del difunto y era sustituido por el nombre del rey sucesor; en otras ocasiones, y esto era bastante frecuente, se colocaba una yesería sobre la más antigua que se quería tapar. Este curioso sistema produjo tiempo atrás una serie de contradicciones a la hora de fechar la época de construcción de cada una de las salas de la Alhambra, hasta que se llegó a la conclusión de que el dato de que aparezca el nombre de un determinado monarca en alguna pared solo es indicativo de haberse realizado una decoración en un momento concreto, pero nada más.
+
+                    -Mocárabes
+
+                    También son de yeso estas pequeñas estalactitas que aparecen agrupadas, sobre todo, en pequeñas cenefas y arcos pero que pueden llegar a ocupar todo el techo de alguna habitación, como veremos, produciendo un fascinante juego de relieves y de dimensiones a partir de la idea central de reunir estos pequeños salientes formando una estructura similar a una colmena, es decir, consiguiendo una serie de pequeñas celdillas con valor independiente dentro del conjunto, como las que fabrican las abejas. El mocárabe tiene como base una estructura de madera muy ligera para dar resistencia y solidez a la escayola con que se cubre.
+
+                    Los suelos son también de arcilla simple en muchas ocasiones, o con algunos azulejos de cerámica; algunos eran así en la época árabe, sobre todo en las cámaras del piso superior y las zonas de servicio, pero otros son reconstrucciones cristianas. Además hay que recordar que el uso de las alfombras era una práctica habitual en esta cultura, lo que justificaría que no se diera mucha importancia al pavimento.
+
+                    En todos los patios exteriores, sometidos a efectos de la erosión muy duros por estar al aire libre, el material utilizado es el mármol blanco, muchísimo más resistente que la arcilla, y de mármol blanco es también la zona conocida como patio o Cuarto de los Leones tanto en la parte central como en las habitaciones que lo rodean. También era de mármol el suelo de la Torre de Comárex, aunque no se ha conservado. La razón es la importancia de estos lugares.
+
+                    Los techos en su mayoría eran de maderas nobles, principalmente de cedro, y estaban fabricados con pequeñas piezas de madera que encajaban a la perfección formando dibujos como si se tratara de un enorme rompecabezas. El más importante es sin duda el de Comaréx.
+
+                    La decoración
+
+                    Otra cuestión importante son los motivos decorativos porque el islam, aunque no prohíbe taxativamentelas representaciones antropomórficas, tampoco las permite con toda libertad; por esa razón los elementos humanos o animales aparecen con poca frecuencia en comparación con otras formas ornamentales. Éstas pueden ser de tres tipos:
+
+                    Decoración geométrica.
+
+                    Se encuentra sobre todo en los alicatados. Se trata de polígonos regulares e irregulares en complicadas combinaciones que dan lugar a otras figuras geométricas aún más complejas. Otras formas muy frecuentes son las pirámides truncadas, con diferente número de escalones según los casos pero siempre impar; alternan las de color negro con las de color blanco y sirven de remate a los zócalos de muchas habitaciones.
+
+                    Decoración vegetal.
+
+                    Abundantísima, ocupa la mayor parte de las yeserías. Se trata de representaciones estilizadas de hojas de plantas del desierto o mediterráneas, como por ejemplo hojas de palmera y de acanto, estas últimas muy frecuentes y abundantes, entrelazadas con la decoración escrita. Hay que destacar en este apartado tres figuras que tienen una significación especial ya que se convierten en símbolos básicos:
+
+                    La piña. Representa la unión de todos los creyentes. Hay que tener en cuenta que en español para hablar de la solidaridad, o de la llamada al grupo, aparecen frases como «hacer una piña» o «formar una piña» y derivados.
+
+                    La bellota. Es el símbolo de la fuerza como fuertes son las encinas y los robles que las producen; en español se dice «estar o ser tan fuerte como un roble».
+
+                    La concha. Evidentemente no se trata de un vegetal, pero como es la representación de la parte calcárease la considera del mundo de lo inanimado. Como en la cultura cristiana, la concha representa la peregrinación, uno de los preceptos coránicos. Este símbolo tiene su origen en que los peregrinos solían llevar estos objetos para beber con más facilidad de los ríos que encontraban en su camino.
+
+
+
+
+
+
+                    Decoración epigráfica.
+
+                    Se dice con frecuencia que la Alhambra es un poema en piedra y no es muy desacertada la afirmación. Hay tres tipos de letras diferentes, aunque la que aparece más es la llamada letra cúfica, y son diferentes los tamaños. Todos los muros están llenos de cenefas escritas de mayor o menor longitud, pero también hay medallones, escudos, estrellas y polígonos rellenos de pequeñas inscripciones. En muchas ocasiones hay frases que se repiten constantemente en todas las habitaciones, y en otras, se trata de fragmentos concretos que sólo se encuentran en un determinado lugar. Hay tres clases de contenidos literarios en esta decoración:
+
+                    Literatura religiosa. Se trata de suras o versículos coránicos, o de frases que glorifican a Dios a través de sus múltiples nombres y expresan su magnificencia, o implorando la protección para el sultán, el edificio y el reino en general.
+
+                    Literatura laudatoria. Ahora se trata de alabar la grandeza del sultán que gobierna en cada momento; se señalan las cualidades por las que el monarca destaca y se le desea lo mejor para él y su reino.
+
+                    Literatura amorosa. Aunque fueron varios los poetas que escribieron composiciones a la Alhambra, que se convirtieron en versos en piedra, Ibn Zámrak es el más conocido y el que ha sido objeto de las traducciones más cuidadosas. Por norma se presenta a la Alhambra como una mujer que habla de su propia belleza o de la grandeza del sultán, su señor; a quien se ofrece y quien la hace feliz, y para quien y por quien es precisamente hermosa.
+
+                    Pero la frase que sin duda se encuentra más veces escrita en la Alhambra es aquella que, traducida al castellano, dice «Sólo Dios es vencedor» o «No hay más vencedor sino Dios», y es el lema o divisa de la dinastía nazarí. Se cuenta que Alhamar, el primero de los Reyes nazaríes, había triunfado en cierta batalla y cuando regresó a Granada todo el pueblo salió a recibirlo aclamándolo y gritando «vencedor», «Alhamar ha vencido»; entonces el rey, lleno de humildad, se bajó del caballo y dijo: «No, yo no he vencido, sólo Dios es el vencedor». Estas palabras aparecen escritas en las yeserías de diversas formas, muchas veces como guirnaldas rodeadas de hojas de plantas; otras veces aparecen en el interior de estrellas u otros polígonos de tamaño diferente según los casos.
+
+                    Otro elemento decorativo muy importante por su significado especial es el llamado «escudo de la banda», que aparece tanto en las yeserías como en los alicatados. El origen del escudo se debe a la alianza entre Fernando III el Santo de Castilla y Alhamar. Con la dinastía nazarí el reino de Granada es vasallo del reino castellano, con todo lo que esto trae consigo y, entre otras cosas, Fernando, como era el uso en las cortes de los reinos cristianos, armó caballero a Alhamar y le concedió un escudo con las siguientes características según el vocabulario especial de la heráldica: en campo (fondo) plateado con banda diagonal azur (azul), con los extremos de la misma en boca de dragones; en la banda es donde está escrita la divisa «Sólo Dios es vencedor». En los escudos de cerámica vidriada que aparecen en la Alhambra no figuran estos colores, porque los sucesores de Alhamar pusieron en sus blasones otras tonalidades, como el fondo de oro o el fondo verde claro, o rojo, siendo este último el más normal; las letras de la divisa suelen ir escritas en color negro.
+
+                    El color
+
+                    Este elemento es fundamental en la decoración, tanto por el resultado de conjunto como por el especial valor simbólico que cada uno de los cuatro colores fundamentales tiene en la tradición musulmana, la cual establece una serie de significados para cada uno:
+
+                    El azul es obviamente el color del cielo, donde reside Dios, el mundo superior del espíritu, y es uno de los más utilizados y que mejor se ha conservado en las yeserías y en muchos mocárabes. Al parecer este color era, junto con el dorado, el que se utilizó en la decoración del palacio más antiguo.
+
+                    El verde es el llamado el color de los árabes, por ejemplo, en las actuales banderas de todos los países árabes aparece este color. Es el color que el Profeta Muhámmad declaró explícitamente por encima de todos los demás. Representa la tierra y la vegetación y, por tanto, también la idea de vergel o jardín magnífico análogo al Paraíso; viene a ocupar el espacio del mundo medio, donde viven los humanos.
+
+                    El rojo, siguiendo el significado simbólico expuesto, es el mundo subterráneo, pero no necesariamente negativo, ya que se interpreta más bien como el mundo de las grandes pasiones incontroladas que sobrepasan los límites de la razón, como puede ser el amor y también la ira; es además el color de la sangre, lo que significa la vida y también la muerte.
+
+                    El cuarto color no es en realidad amarillo, se trata del color dorado o el color de la miel, y es representativo de la majestuosidad, con el poder y la riqueza que lleva consigo.
+
+                    Estos cuatro colores se combinan con el blanco y el negro que sirven con frecuencia para delimitar el espacio y las formas en las que se encierra el color. Las tonalidades son diversas y sobre todo abundan los matices intensos, aunque en muchas ocasiones el paso del tiempo las ha ido modificando hasta hacerlas incluso desaparecer, sobre todo en las yeserías; también en los alicatados ha habido alteraciones sobre los originales debido más a la antigüedad que a defectos de cocción.
+
+                    Hay que tener muy en cuenta que muchos de los cristales estaban coloreados; por eso, cuando el sol se filtraba a través de ellos se producían rayos multicolores que, junto con la policromía de paredes y techos, daban la impresión de vivir en un arcoíris permanente.
+
+                    Otro punto muy importante que hay que considerar cuando se visitan los palacios árabes de la Alhambra es
+
+                    que lo que estamos contemplando no son más que las habitaciones desnudas. Lo único que nos ha llegado es lo que dicen las paredes aunque también está muy cambiada su forma original, pero siguen manteniendo la especial belleza que sólo da el paso de los años. Con todo debemos intentar imaginar cómo serían esos lugares cuando tenían sus muebles y sobre todo sus tejidos, es decir la cantidad de alfombras, tapices, cortinas, almohadones, divanes y cojines, típicos de esta última manifestación, bastante hedonista y decadente, de la cultura islámica andalusí.
+                </p>
             </article>
         </section>
 
